--- a/style/betterize.css
+++ b/style/betterize.css
@@ -2,7 +2,7 @@
 /* --------------------------------------------------------------------------- /
 /* betterize.css - Opinionated normalization for better cross-browser design - /
 /* @author Stephen M Irving -- <@metric_dev> --------------------------------- /
-/* @version 1.0.1 - 03/13/2024 ----------------------------------------------- /
+/* @version 1.0.2 - 03/14/2024 ----------------------------------------------- /
 /* --------------------------------------------------------------------------- /
 /* ////////////////////////////////////////////////////////////////////////// */
 
@@ -13,57 +13,15 @@
 /* --------------------------------------------------------------------------- /
 /* -------------------------------------------------------------------------- */
 
-
-html {
-  overflow: hidden scroll;
-  box-sizing: border-box;
-  font-family:
-    system-ui,
-    -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    sans-serif,
-    'Apple Color Emoji',
-    'Segoe UI Emoji',
-    'Segoe UI Symbol';
-  font-size: 1em;
-  line-height: 1.4;
-  overflow-wrap: break-word;
-  -moz-tab-size: 4;
-  tab-size: 4;
-  -webkit-hyphens: auto;
-  hyphens: auto;
-  cursor: default;
-  color-scheme: light dark;
-  scrollbar-gutter: stable;
-  hanging-punctuation: first last;
-  -webkit-tap-highlight-color: transparent;
-  -webkit-text-size-adjust: 100%;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  html {
-    scroll-behavior: smooth;
-  }
-
-  /*
-   * 1. May need to modify this value depending on height
-   *    of any masthead/top nav bar or similar content
-   */
-  :has(:target) {
-    scroll-behavior: smooth;
-    scroll-padding-top: 3rem; /* 1 */
-  }
-}
-
 /*
  * 1. Set `box-sizing` to `inherit` while setting the inheritance root,
- *    which is the html element, to `box-sizing: border-box`
+ *    which is the html element, to `box-sizing: border-box`. This is
+ *    a much more intuitive default box-model than `content-box`.
  * 2. Setting `min-width: 0` here is a VERY opinionated decision. It can save
  *    you a lot of time trying to figure out a ton of odd and unintuitive
  *    behavior, especially with flexbox, but it can also cause unexpected
  *    issues if you aren't aware it is here.
- * 3. Set background images to `no-repeat` which is a much better default
+ * 3. Set background images to `no-repeat` which is a much better default.
  */
 
 *,
@@ -82,7 +40,86 @@ html {
   text-decoration: inherit;
 }
 
-/* TODO: Customize the selection background and color to match your design. */
+/*
+ *  1. Prevent horizontal scrolling from being possible and set vertical
+ *     scrolling. If you want a page with no scrollbar at all change
+ *     to `overflow: hidden`.
+ *  2. Set the root element box-sizing, the universal selector will inherit.
+ *  3. Improve consistency of default font in all browsers.
+ *  4. Set the default font size in an accessible way (such that a user
+ *     can change the default size with the browser settings).
+ *  5. Change the `line-height` to an opinionated default.
+ *  6. Set a new default for `overflow-wrap` on the root element since it
+ *     is an inherited property.
+ *  7. Allow the browser to automatically break words at appropriate hyphenation
+ *     points. Ensure you specificy a language using the `lang` HTML attribute.
+ *     to guarantee the automatic hyphenation applied is language-specific.
+ *  8. Use a more readable tab size.
+ *  9. Resets the cursor to default across all browsers and for any property
+ *     that does not explicitly define a different cursor.
+ * 10. Tell the browser which color schemes the page can be rendered in.
+ *     Change to just `light` or just `dark` if only doing a single scheme,
+ *     but both are strongly recommended for accessibility purposes.
+ * 11. This will reserve space for a scrollbar, preventing unwanted layout
+ *     shifts as content grows or shrinks. If you are making a page that
+ *     has no scrolling whatsoever, you can remove or overwrite this rule.
+ * 12. Allows opening and closing punctuation like quotes at the start and end
+ *     of a line of text to "hang" outside the line's content box, making the
+ *     formatting look more aesthetically pleasing.
+ * 13. Remove the blue tap box over buttons and links in some versions of
+ *     WebKit browsers for touch-enabled devices.
+ * 14. Prevent adjustments of font size after orientation changes in iOS.
+ */
+
+html {
+  overflow: hidden scroll; /* 1 */
+  box-sizing: border-box; /* 2 */
+  font-family: /* 3 */
+    system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    'Segoe UI',
+    sans-serif,
+    'Apple Color Emoji',
+    'Segoe UI Emoji',
+    'Segoe UI Symbol';
+  font-size: 1em; /* 4 */
+  line-height: 1.4; /* 5 */
+  overflow-wrap: break-word; /* 6 */
+  -webkit-hyphens: auto; /* 7 */
+  hyphens: auto; /* 7 */
+  -moz-tab-size: 4; /* 8 */
+  tab-size: 4; /* 8 */
+  cursor: default; /* 9 */
+  color-scheme: light dark; /* 10 */
+  scrollbar-gutter: stable; /* 11 */
+  hanging-punctuation: first last; /* 12 */
+  -webkit-tap-highlight-color: transparent; /* 13 */
+  -webkit-text-size-adjust: 100%; /* 14 */
+}
+
+/*
+ * If user does not have prefers-reduced-motion on in their OS settings,
+ * this will keep scrolling from looking jumpy when an anchor link or other
+ * action automatically scrolls the page.
+ */
+
+@media (prefers-reduced-motion: no-preference) {
+  html {
+    scroll-behavior: smooth;
+  }
+
+  /*
+   * 1. May need to modify this value depending on height
+   *    of any masthead/top nav bar or similar content
+   */
+  :has(:target) {
+    scroll-behavior: smooth;
+    scroll-padding-top: 3rem; /* 1 */
+  }
+}
+
+/* TODO: Customize the selection background and color to match your design */
 
 ::-moz-selection {
   background: #345171;
@@ -121,7 +158,8 @@ h3,
 h4,
 h5,
 h6,
-blockquote {
+blockquote,
+figcaption {
   text-wrap: balance;
 }
 
@@ -214,7 +252,7 @@ abbr[title] {
   text-decoration: underline dotted;
 }
 
-/* Render tables with collapsed borders and other improved defaults. */
+/* Render tables with collapsed borders and other improved defaults */
 
 table {
   vertical-align: middle;
@@ -243,6 +281,8 @@ hr {
   color: inherit;
 }
 
+/* Normalize the margins on all lists */
+
 dl,
 ol,
 ul {
@@ -250,7 +290,7 @@ ul {
   margin-bottom: 1rem;
 }
 
-/* Remove the list-style for <ol> and <ul> elements used in <nav> elements. */
+/* Reset all list styles for <ol> and <ul> elements used in <nav> elements */
 
 menu,
 nav ol,
@@ -263,8 +303,9 @@ footer ul {
 }
 
 /*
- * Remove the margin on nested detail lists in Chrome, Edge, IE, and Safari,
- * on nested ordered and unordered lists in Edge 18- and IE.
+ * Remove the margin on nested detail lists in IE and some versions of Chrome,
+ * Edge, and Safari. Remove margin on nested ordered and unordered lists in
+ * legacy Edge (18-) and IE.
  */
 
 dl dl,
@@ -286,7 +327,7 @@ nav li::before {
   float: left;
 }
 
-/* Ensure dialog elements always displayed correctly. */
+/* Ensure dialog elements always displayed correctly */
 
 dialog {
   position: absolute;
@@ -339,7 +380,7 @@ textarea {
   line-height: 1.15;
 }
 
-/* Fix the inconsistent default appearance across browsers. */
+/* Fix the inconsistent default appearance across browsers */
 
 button,
 input,
@@ -352,7 +393,7 @@ textarea {
   letter-spacing: inherit;
 }
 
-/* Ensure the correct touch action for these elements across browsers. */
+/* Ensure the correct touch action for these elements across browsers */
 
 a,
 area,
@@ -372,21 +413,21 @@ a {
   cursor: pointer;
 }
 
-/* Show the overflow in legacy Edge (18-) and IE. */
+/* Show the overflow in legacy Edge (18-) and IE */
 
 button,
 input {
   overflow: visible;
 }
 
-/* Remove the inheritance of text transform in Edge, Firefox, and IE. */
+/* Remove the inheritance of text transform in Edge, Firefox, and IE */
 
 button,
 select {
   text-transform: none;
 }
 
-/* Fix the inconsistent appearance across browsers. */
+/* Fix the inconsistent appearance across browsers */
 
 select {
   padding-right: 1em;
@@ -397,7 +438,7 @@ select {
   background: no-repeat right center / 1em;
 }
 
-/* Correct the inability to style clickable types in iOS and Safari. */
+/* Correct the inability to style clickable types in iOS and Safari */
 
 button,
 [type='button'],
@@ -406,7 +447,7 @@ button,
   -webkit-appearance: button;
 }
 
-/* Remove the inner border and padding on focused buttons in Firefox. */
+/* Remove the inner border and padding on focused buttons in Firefox */
 
 button::-moz-focus-inner,
 [type='button']::-moz-focus-inner,
@@ -531,7 +572,7 @@ progress {
   display: none;
 }
 
-/* Remove the additional :invalid styles in Firefox. */
+/* Remove the additional :invalid styles in Firefox */
 
 :-moz-ui-invalid {
   box-shadow: none;
@@ -545,18 +586,18 @@ progress {
   box-shadow: none;
 }
 
-/* Correct the cursor style of increment and decrement buttons in Chrome. */
+/* Correct the cursor style of increment and decrement buttons in Chrome */
 
 [type='number']::-webkit-inner-spin-button,
 [type='number']::-webkit-outer-spin-button {
   height: auto;
 }
 
-/* Correct the appearance in Chrome and Safari and the outline style in Safari. */
+/* Correct the appearance in Chrome and Safari and the outline style in Safari */
 
 [type='search'] {
-  outline-offset: -2px;
   -webkit-appearance: textfield;
+  outline-offset: -2px;
 }
 
 /*
