--- a/style/_betterize.sass
+++ b/style/_betterize.sass
@@ -755,6 +755,8 @@ svg:not([fill])
 [disabled]
   cursor: not-allowed
 
+// Change the display on visually hidden accessible elements.
+
 [aria-hidden='false'][hidden]
   display: initial
 
