--- a/style/betterize.less
+++ b/style/betterize.less
@@ -799,6 +799,9 @@ svg:not([fill]) {
   cursor: not-allowed;
 }
 
+// Change the cursor on disabled, not-editable, or otherwise
+// inoperable elements in all browsers.
+
 [aria-hidden='false'][hidden] {
   display: initial;
 
