added back in some legacy styles

--- a/style/_betterize.sass
+++ b/style/_betterize.sass
@@ -199,6 +199,14 @@ body
   @media screen and (min-width: 80em)
     text-rendering: optimizeLegibility
 
+// Ensure HTML5 structual elements and media elements
+// display correctly in IE and very old browsers.
+
+article, aside, dialog, figcaption, figure,
+footer, header, hgroup, main, nav, section,
+canvas, details, legend, img, svg, video
+  display: block
+
 // Better balance blocks of text in headings, blockqutoes, and figure captions.
 // See: https://developer.chrome.com/docs/css-ui/css-text-wrap-balance
 
@@ -292,9 +300,12 @@ samp
 // and IE11, so force a non-overlapping, non-auto-hiding scrollbar.
 
 pre
-  overflow: auto // 1
-  margin: 0 0 1rem // 2
-  -ms-overflow-style: scrollbar // 3
+  // 1
+  overflow: auto
+  // 2
+  margin: 0 0 1rem
+  // 3
+  -ms-overflow-style: scrollbar
 
 output
   display: inline-block
@@ -306,13 +317,16 @@ address
 
 // 1. Remove the bottom border in Chrome 57-
 // 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
-// 3. Add explicit cursor to indicate behavior.
+// 3. Add explicit cursor to indicate changed behavior.
 
 abbr[title]
-  border-bottom: none // 1
-  text-decoration: underline // 2
-  text-decoration: underline dotted // 2
-  cursor: help // 3
+  // 1
+  border-bottom: none
+  // 2
+  text-decoration: underline
+  text-decoration: underline dotted
+   // 3
+  cursor: help
 
 // Render tables with collapsed borders and other improved defaults.
 
@@ -401,7 +415,6 @@ dialog
   position: absolute
   right: 0
   left: 0
-  display: block
   width: -webkit-fit-content
   width: -moz-fit-content
   width: fit-content
@@ -467,11 +480,16 @@ textarea,
 [tabindex='0']
   touch-action: manipulation
 
-// 1. Ensure default cursor behavior on links.
-// 2. Remove gaps in link underlines in iOS8+ and Safari 8+
+// 1. Remove the gray background on active links in IE10
+// 2. Ensure default cursor behavior on links.
+// 3. Remove gaps in link underlines in iOS8+ and Safari 8+
 
 a
+  // 1
+  background-color: transparent
+  // 2
   cursor: pointer
+  // 3
   -webkit-text-decoration-skip: objects
 
 // Show the overflow in legacy Edge (18-) and IE.
@@ -526,6 +544,8 @@ textarea:disabled
   background-color: hsl(0, 0%, 90.2%)
   cursor: not-allowed
 
+// Remove the padding and add the correct box sizing in IE 10-
+
 [type='checkbox'],
 [type='radio']
   box-sizing: border-box
@@ -572,7 +592,6 @@ fieldset
 // out when they zero out <fieldset> elements.
 
 legend
-  display: block
   width: 100%
   max-width: 100%
   padding: 0
@@ -692,13 +711,6 @@ img,
 svg,
 video
   vertical-align: middle
-
-canvas,
-details,
-img,
-svg,
-video
-  display: block
 
 // The styles necessary for the most optimized <img> defaults.
 // The other styles associated with img are grouped with other selectors.
