--- a/style/betterize.css
+++ b/style/betterize.css
@@ -191,6 +191,15 @@ body {
   }
 }
 
+// Ensure HTML5 structual elements and media elements
+// display correctly in IE and very old browsers.
+
+article, aside, dialog, figcaption, figure,
+footer, header, hgroup, main, nav, section,
+canvas, details, legend, img, svg, video {
+  display: block;
+}
+
 /*
  * Better balance blocks of text in headings, blockqutoes, and figure captions.
  * See: https://developer.chrome.com/docs/css-ui/css-text-wrap-balance
@@ -315,7 +324,6 @@ pre {
   -ms-overflow-style: scrollbar; /* 3 */
 }
 
-
 output {
   display: inline-block;
 }
@@ -329,7 +337,7 @@ address {
 /*
  * 1. Remove the bottom border in Chrome 57-
  * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
- * 3. Add explicit cursor to indicate behavior.
+ * 3. Add explicit cursor to indicate changed behavior.
  */
 
 abbr[title] {
@@ -441,7 +449,6 @@ dialog {
   position: absolute;
   right: 0;
   left: 0;
-  display: block;
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
@@ -517,13 +524,15 @@ textarea,
 }
 
 /*
- * 1. Ensure default cursor behavior on links.
- * 2. Remove gaps in link underlines in iOS8+ and Safari 8+
+ * 1. Remove the gray background on active links in IE10
+ * 2. Ensure default cursor behavior on links.
+ * 3. Remove gaps in link underlines in iOS8+ and Safari 8+
  */
 
 a {
-  cursor: pointer; /* 1 */
-  -webkit-text-decoration-skip: objects; /* 2 */
+  background-color: transparent; // 1
+  cursor: pointer; // 2
+  -webkit-text-decoration-skip: objects; // 3
 }
 
 /* Show the overflow in legacy Edge (18-) and IE */
@@ -582,6 +591,8 @@ textarea:disabled {
   background-color: hsl(0, 0%, 90.2%);
   cursor: not-allowed;
 }
+
+/* Remove the padding and add the correct box sizing in IE 10- */
 
 [type='checkbox'],
 [type='radio'] {
@@ -643,7 +654,6 @@ fieldset {
  */
 
 legend {
-  display: block;
   width: 100%;
   max-width: 100%;
   padding: 0;
@@ -797,14 +807,6 @@ img,
 svg,
 video {
   vertical-align: middle;
-}
-
-canvas,
-details,
-img,
-svg,
-video {
-  display: block;
 }
 
 /*
