--- a/style/_betterize.sass
+++ b/style/_betterize.sass
@@ -83,7 +83,8 @@ html
     sans-serif,
     'Apple Color Emoji',
     'Segoe UI Emoji',
-    'Segoe UI Symbol'
+    'Segoe UI Symbol',
+    'Noto Color Emoji'
   // 4
   font-size: 1em
   // 5
@@ -194,7 +195,8 @@ body
     // Emoji fonts
     'Apple Color Emoji',
     'Segoe UI Emoji',
-    'Segoe UI Symbol'
+    'Segoe UI Symbol',
+    'Noto Color Emoji'
   font-size: 1rem
   // 5
   line-height: 1.5
