--- a/style/betterize.css
+++ b/style/betterize.css
@@ -82,7 +82,8 @@ html {
     sans-serif,
     'Apple Color Emoji',
     'Segoe UI Emoji',
-    'Segoe UI Symbol'; /* 3 */
+    'Segoe UI Symbol',
+    'Noto Color Emoji'; /* 3 */
   font-size: 1em; /* 4 */
   line-height: 1.15; /* 5 */
   overflow-wrap: break-word; /* 6 */
@@ -187,7 +188,8 @@ body {
     /* Emoji fonts */
     'Apple Color Emoji',
     'Segoe UI Emoji',
-    'Segoe UI Symbol';
+    'Segoe UI Symbol',
+    'Noto Color Emoji';
   font-size: 1rem; /* 4 */
   line-height: 1.5; /* 5 */
   text-align: left; /* 6 */
