--- a/style/_betterize.scss
+++ b/style/_betterize.scss
@@ -79,7 +79,8 @@ html {
     sans-serif,
     'Apple Color Emoji',
     'Segoe UI Emoji',
-    'Segoe UI Symbol'; // 3
+    'Segoe UI Symbol',
+    'Noto Color Emoji'; // 3
   font-size: 1em; // 4
   line-height: 1.15; // 5
   overflow-wrap: break-word; // 6
@@ -177,7 +178,8 @@ body {
     // Emoji fonts
     'Apple Color Emoji',
     'Segoe UI Emoji',
-    'Segoe UI Symbol';
+    'Segoe UI Symbol',
+    'Noto Color Emoji';
   font-size: 1rem; // 4
   line-height: 1.5; // 5
   text-align: left; // 6
