--- a/style/betterize.less
+++ b/style/betterize.less
@@ -2,7 +2,7 @@
 /// ------------------------------------------------------------------------- //
 /// betterize.less - Opinionated normalization, better cross-browser design - //
 /// @author Stephen M Irving -- <@metric_dev> ------------------------------- //
-/// version 1.1.1 - 03/16/2024 --------------------------------------------- //
+/// version 1.1.1 - 03/16/2024 ---------------------------------------------- //
 /// ------------------------------------------------------------------------- //
 ////////////////////////////////////////////////////////////////////////////////
 
@@ -16,7 +16,9 @@
 
 // 1. Set `box-sizing` to `inherit` while setting the inheritance root,
 //    which is the html element, to `box-sizing: border-box`. This is
-//    a much more intuitive default box-model than `content-box`.
+//    a much more intuitive default box-model than `content-box` as it
+//    will make `width` and `height` calculations include `padding` and
+//    `border` size.
 // 2. Setting `min-width: 0` here is a VERY opinionated decision. It can save
 //    you a lot of time trying to figure out a ton of odd and unintuitive
 //    behavior, especially with flexbox, but it can also cause unexpected
