--- a/style/betterize.css
+++ b/style/betterize.css
@@ -2,7 +2,7 @@
 /* --------------------------------------------------------------------------- /
 /* betterize.css - Opinionated normalization for better cross-browser design - /
 /* @author Stephen M Irving -- <@metric_dev> --------------------------------- /
-/* version 1.1.1 - 03/16/2024 ----------------------------------------------- /
+/* version 1.1.1 - 03/16/2024 ------------------------------------------------ /
 /* --------------------------------------------------------------------------- /
 /* ////////////////////////////////////////////////////////////////////////// */
 
@@ -16,7 +16,9 @@
 /*
  * 1. Set `box-sizing` to `inherit` while setting the inheritance root,
  *    which is the html element, to `box-sizing: border-box`. This is
- *    a much more intuitive default box-model than `content-box`.
+ *    a much more intuitive default box-model than `content-box` as it
+ *    will make `width` and `height` calculations include `padding` and
+ *    `border` size.
  * 2. Setting `min-width: 0` here is a VERY opinionated decision. It can save
  *    you a lot of time trying to figure out a ton of odd and unintuitive
  *    behavior, especially with flexbox, but it can also cause unexpected
@@ -204,8 +206,10 @@ body {
   }
 }
 
-// Ensure HTML5 structual elements and media elements
-// display correctly in IE and very old browsers.
+/*
+ * Ensure HTML5 structual elements and media elements
+ * display correctly in IE and very old browsers.
+ */
 
 article, aside, dialog, figcaption, figure,
 footer, header, hgroup, main, nav, section,
