--- a/style/betterize.css
+++ b/style/betterize.css
@@ -1,8 +1,8 @@
 /* /////////////////////////////////////////////////////////////////////////// /
 /* --------------------------------------------------------------------------- /
-/* betterize.css - Opinionated normalization for better cross-browser design - /
+/* betterize.css -- Modern normalization for better cross-browser design ----- /
 /* @author Stephen M Irving -- <@metric_dev> --------------------------------- /
-/* version 1.1.1 - 03/16/2024 ------------------------------------------------ /
+/* version 1.1.1 -- 03/16/2024 ----------------------------------------------- /
 /* --------------------------------------------------------------------------- /
 /* ////////////////////////////////////////////////////////////////////////// */
 
@@ -12,6 +12,7 @@
 /* #BASE STYLES: opinionated defaults ---------------------------------------- /
 /* --------------------------------------------------------------------------- /
 /* -------------------------------------------------------------------------- */
+
 
 /*
  * 1. Set `box-sizing` to `inherit` while setting the inheritance root,
@@ -906,6 +907,7 @@ svg:not([fill]) {
   position: absolute;
   clip: rect(0, 0, 0, 0);
 }
+
 
 /* --------------------------------------------------------------------------- /
 /* --------------------------------------------------------------------------- /
