--- a/style/_betterize.sass
+++ b/style/_betterize.sass
@@ -1,9 +1,9 @@
 ////////////////////////////////////////////////////////////////////////////////
-/// ------------------------------------------------------------------------- //
-/// betterize.sass - Opinionated normalization, better cross-browser design - //
-/// @author Stephen M Irving -- <@metric_dev> ------------------------------- //
-/// version 1.1.1 - 03/16/2024 ---------------------------------------------- //
-/// ------------------------------------------------------------------------- //
+/// ------------------------------------------------------------------------ ///
+/// betterize.sass -- Modern normalization for better cross-browser design - ///
+/// @author Stephen M Irving -- <@metric_dev> ------------------------------ ///
+/// version 1.1.1 -- 03/16/2024 -------------------------------------------- ///
+/// ------------------------------------------------------------------------ ///
 ////////////////////////////////////////////////////////////////////////////////
 
 
