--- a/style/betterize.less
+++ b/style/betterize.less
@@ -910,8 +910,7 @@ svg:not([fill]) {
   overflow: clip;
 }
 
-// A quick way to apply flex-based horizontal and vertical centering
-// to an element from the HTML.
+// Apply flex-based centering to an element directly from markup.
 
 .flex-center {
   display: flex;
