--- a/style/betterize.css
+++ b/style/betterize.css
@@ -1001,10 +1001,7 @@ svg:not([fill]) {
   overflow: clip;
 }
 
-/*
- * A quick way to apply flex-based horizontal and vertical centering
- * to an element
- */
+/* Apply flex-based centering to an element directly from markup. */
 
 .flex-center {
   display: flex;
