--- a/style/_print.sass
+++ b/style/_print.sass
@@ -1,6 +1,6 @@
 ////////////////////////////////////////////////////////////////////////////////
 ///                                                                          ///
-/// #PRINT STYLES - version 1.1.1 - 03/16/2024                               ///
+/// #PRINT STYLES -- version 1.2.0 -- 03/16/2024                             ///
 ///                                                                          ///
 /// Append these styles to the bottom of your stylesheet and make any        ///
 /// changes necessary to your project from there. Minimizing the total       ///
