--- a/betterize.css
+++ b/betterize.css
@@ -2,7 +2,7 @@
 /* --------------------------------------------------------------------------- /
 /* betterize.css -- Modern normalization for better cross-browser design ----- /
 /* @author Stephen M Irving -- <@metric_dev> --------------------------------- /
-/* version 1.2.3 -- 03/17/2024 ----------------------------------------------- /
+/* version 1.2.4 -- 03/17/2024 ----------------------------------------------- /
 /* --------------------------------------------------------------------------- /
 /* ////////////////////////////////////////////////////////////////////////// */
 
@@ -50,7 +50,7 @@
  *     on the body will prevent the behavior from breaking when an element
  *     like a masthead / nav bar is set with `position: sticky`
  *  2. Set the root element box-sizing, the universal selector will inherit.
- *  3. Change default font family in all browsers.
+ *  3. Add backup font stack that works across all browsers and devices.
  *  4. Set the default font size in an accessible way (such that a user
  *     can change the default size with the browser settings).
  *  5. Normalize default `line-height` across browsers.
@@ -82,7 +82,22 @@ html {
   overflow: hidden scroll; /* 1 */
   box-sizing: border-box; /* 2 */
   font-family:
+    /* Newer browsers */
+    system-ui,
+    /* Safari for OS X and iOS (San Francisco) */
+    -apple-system,
+    /* Chrome < 56 for OS X (San Francisco) */
+    BlinkMacSystemFont,
+    /* Windows */
+    'Segoe UI',
+    /* Android */
+    Roboto,
+    /* Basic web fallback */
+    'Helvetica Neue',
+    Helvetica,
+    Arial,
     sans-serif,
+    /* Emoji fonts */
     'Apple Color Emoji',
     'Segoe UI Emoji',
     'Segoe UI Symbol',
@@ -172,27 +187,6 @@ body {
   min-height: 100vh; /* 2 */
   min-height: 100dvh; /* 2 */
   margin: 0; /* 3 */
-  font-family:
-    /* Newer browsers */
-    system-ui,
-    /* Safari for OS X and iOS (San Francisco) */
-    -apple-system,
-    /* Chrome < 56 for OS X (San Francisco) */
-    BlinkMacSystemFont,
-    /* Windows */
-    'Segoe UI',
-    /* Android */
-    Roboto,
-    /* Basic web fallback */
-    'Helvetica Neue',
-    Helvetica,
-    Arial,
-    sans-serif,
-    /* Emoji fonts */
-    'Apple Color Emoji',
-    'Segoe UI Emoji',
-    'Segoe UI Symbol',
-    'Noto Color Emoji';
   font-size: 1rem; /* 4 */
   line-height: 1.5; /* 5 */
   text-align: left; /* 6 */
@@ -209,7 +203,7 @@ body {
 
 /*
  * Ensure HTML5 structual elements and media elements
- * display correctly in IE and very old browsers.
+ * display correctly in all browsers.
  */
 
 article, aside, dialog, figcaption, figure,
@@ -442,15 +436,9 @@ footer ul {
  * legacy Edge (18-) and IE.
  */
 
-dl dl,
-dl ol,
-dl ul,
-ol dl,
-ol ol,
-ol ul,
-ul dl,
-ul ol,
-ul ul {
+dl dl, dl ol, dl ul,
+ol dl, ol ol, ol ul,
+ul dl, ul ol, ul ul {
   margin: 0;
 }
 
@@ -844,7 +832,6 @@ iframe {
 }
 
 summary {
-  display: list-item;
   cursor: pointer;
 }
 
