--- a/print.less
+++ b/print.less
@@ -1,6 +1,6 @@
 ////////////////////////////////////////////////////////////////////////////////
 ///                                                                          ///
-/// #PRINT STYLES -- version 1.2.3 -- 03/17/2024                             ///
+/// #PRINT STYLES -- version 1.2.4 -- 03/17/2024                             ///
 ///                                                                          ///
 /// Append these styles to the bottom of your stylesheet and make any        ///
 /// changes necessary to your project from there. Minimizing the total       ///
@@ -10,6 +10,8 @@
 ////////////////////////////////////////////////////////////////////////////////
 
 @media print {
+  // Eliminate all the color and shadow on the page
+
   *,
   *::before,
   *::after {
@@ -18,6 +20,9 @@
     box-shadow: none !important;
     text-shadow: none !important;
   }
+
+  // Underline links and include the link address
+  // in parentheses after the link text
 
   a,
   a:visited {
@@ -50,19 +55,21 @@
     break-inside: avoid;
   }
 
-  ///
   // Printing Tables:
   // https://web.archive.org/web/20180815150934/http://css-discuss.incutio.com/wiki/Printing_Tables
-  ///
 
   thead {
     display: table-header-group;
   }
 
+  // Avoid page breaking inside table rows or images
+
   tr,
   img {
     break-inside: avoid;
   }
+
+  // Avoid page orphans/widows and page breaking after a header
 
   p,
   h2,
