--- a/_print.sass
+++ b/_print.sass
@@ -65,11 +65,13 @@
   // Avoid page orphans/widows and page breaking after a header
 
   p,
+  h1
   h2,
   h3
     orphans: 3
     widows: 3
 
+  h1,
   h2,
   h3
     break-after: avoid
