--- a/_betterize.sass
+++ b/_betterize.sass
@@ -2,7 +2,7 @@
 /// ------------------------------------------------------------------------ ///
 /// betterize.sass -- Modern normalization for better cross-browser design - ///
 /// @author Stephen M Irving -- <@metric_dev> ------------------------------ ///
-/// version 1.2.4 -- 03/17/2024 -------------------------------------------- ///
+/// version 1.2.5 -- 03/17/2024 -------------------------------------------- ///
 /// ------------------------------------------------------------------------ ///
 ////////////////////////////////////////////////////////////////////////////////
 
@@ -230,11 +230,16 @@ figcaption
   text-wrap: balance
 
 // 1. Remove the top margin for easier control as it avoids margin collapse.
-// 2. Correct the font size <h1> elements within <section> and
+// 2. Overwrite bottom margin with margin-block-end for browesers that support it.
+// 3. Correct the font size <h1> elements within <section> and
 //    <article> contexts in Chrome, Firefox, and Safari.
 
 h1
+  // 1
   margin: 0 0 0.67em
+  // 2
+  margin-block-end: 0.67em
+  // 3
   font-size: 2em
 
 // Remove the top margin for easier control as it avoids margin collapse.
@@ -255,7 +260,8 @@ p
   text-wrap: pretty
 
 // Remove the top margin for easier control as it avoids margin collapse.
-// Normalize the margins on all lists as well.
+// Reset the side margins and change the bottom margin from `1em` to `1rem`.
+// Overwrite bottom margin with margin-block-end for browesers that support it.
 
 blockquote,
 figure,
@@ -263,6 +269,7 @@ dl,
 ol,
 ul
   margin: 0 0 1rem
+  margin-block-end: 1rem
 
 // Normalize bold and strong across browsers.
 
@@ -305,7 +312,8 @@ samp
 
 // 1. Dont't allow content to break outside
 // 2. Remove top margin to avoid vertical margin collapse.
-// 3. Having @viewport set causes scrollbars to overlap content in legacy Edge
+// 3. Overwrite margin-bottom with margin-block-end for browsers that support it.
+// 4. Having @viewport set causes scrollbars to overlap content in legacy Edge
 //    and IE11, so force a non-overlapping, non-auto-hiding scrollbar.
 
 pre
@@ -314,6 +322,8 @@ pre
   // 2
   margin: 0 0 1rem
   // 3
+  margin-block-end: 1rem
+  // 4
   -ms-overflow-style: scrollbar
 
 output
@@ -321,6 +331,7 @@ output
 
 address
   margin-bottom: 1rem
+  margin-block-end: 1rem
   font-style: normal
   line-height: inherit
 
@@ -371,7 +382,8 @@ hr
   padding: 0
   border: 0
   border-top: 2px solid currentColor
-  margin: 1em 0
+  margin: 0.75em 0
+  margin-block-end: 0.75em
   color: inherit
 
 // If you do not like the look of the modified <hr> above, and you want a more
@@ -398,10 +410,11 @@ dfn
 cite
   font-style: italic
 
-// Undo browser default
+// Undo browser default margins
 
 dd
   margin-bottom: 0.5rem
+  margin-block-end: 0.5rem;
   margin-left: 0
 
 // Reset all list styles for <ol> and <ul> elements used in <nav> elements
@@ -615,6 +628,7 @@ legend
   max-width: 100%
   padding: 0
   margin-bottom: 0.5rem
+  margin-block-end: 0.5rem
   color: inherit
   font-size: 1.5rem
   line-height: inherit
