--- a/_betterize.sass
+++ b/_betterize.sass
@@ -2,7 +2,7 @@
 /// ------------------------------------------------------------------------ ///
 /// betterize.sass -- Modern normalization for better cross-browser design - ///
 /// @author Stephen M Irving -- <@metric_dev> ------------------------------ ///
-/// version 1.2.5 -- 03/17/2024 -------------------------------------------- ///
+/// version 1.2.6 -- 03/18/2024 -------------------------------------------- ///
 /// ------------------------------------------------------------------------ ///
 ////////////////////////////////////////////////////////////////////////////////
 
@@ -551,6 +551,7 @@ select
 
 // 1. Remove the default `border-radius` that macOS Chrome adds.
 // 2. Correct the inability to style clickable types in iOS and Safari.
+// 3. Changes the default cursor on all buttons to the pointer.
 
 button,
 [type='button'],
@@ -560,6 +561,8 @@ button,
   border-radius: 0
   // 2
   -webkit-appearance: button
+  // 3
+  cursor: pointer
 
 // Remove the inner border and padding on focused buttons in Firefox.
 
