--- a/_print.sass
+++ b/_print.sass
@@ -1,6 +1,6 @@
 ////////////////////////////////////////////////////////////////////////////////
 /// ------------------------------------------------------------------------ ///
-/// #PRINT STYLES -- ver. 1.2.5 -- 03/17/2024 ------------------------------ ///
+/// #PRINT STYLES -- version 1.2.6 -- 03/18/2024 --------------------------- ///
 /// ------------------------------------------------------------------------ ///
 /// Append these styles to the bottom of your stylesheet and make any        ///
 /// changes necessary to your project from there. Minimizing the total       ///
