--- a/_betterize.sass
+++ b/_betterize.sass
@@ -297,7 +297,7 @@ ol,
 ul,
 blockquote,
 figure
-  margin: 0 0 16px
+  margin: 0 0 1em
   margin: 0 0 1rem
   margin-block-end: 1rem
 
@@ -405,7 +405,7 @@ pre
   // 1
   overflow: auto
   // 2
-  margin: 0 0 16px
+  margin: 0 0 1em
   margin: 0 0 1rem
   // 3
   margin-block-end: 1rem
@@ -422,7 +422,7 @@ output
   display: inline-block
 
 address
-  margin-bottom: 16px
+  margin-bottom: 1em
   margin-bottom: 1rem
   margin-block-end: 1rem
   font-style: normal
@@ -524,7 +524,7 @@ dfn
 // Undo browser default margins
 
 dd
-  margin-bottom: 8px
+  margin-bottom: 0.5em
   margin-bottom: 0.5rem
   margin-block-end: 0.5rem
   margin-left: 0
@@ -790,7 +790,7 @@ legend
   width: 100%
   max-width: 100%
   padding: 0
-  margin-bottom: 8px
+  margin-bottom: 0.36364em;
   margin-bottom: 0.5rem
   margin-block-end: 0.5rem
   color: inherit
