--- a/betterize.less
+++ b/betterize.less
@@ -278,7 +278,7 @@ ol,
 ul,
 blockquote,
 figure {
-  margin: 0 0 16px;
+  margin: 0 0 1em;
   margin: 0 0 1rem;
   margin-block-end: 1rem;
 }
@@ -396,7 +396,7 @@ kbd {
 
 pre {
   overflow: auto; // 1
-  margin: 0 0 16px; // 2
+  margin: 0 0 1em; // 2
   margin: 0 0 1rem; // 2
   margin-block-end: 1rem; // 3
   -ms-overflow-style: scrollbar; // 4
@@ -414,7 +414,7 @@ output {
 }
 
 address {
-  margin-bottom: 16px;
+  margin-bottom: 1em;
   margin-bottom: 1rem;
   margin-block-end: 1rem;
   font-style: normal;
@@ -517,7 +517,7 @@ dfn {
 // Undo browser default margins
 
 dd {
-  margin-bottom: 8px;
+  margin-bottom: 0.5em;
   margin-bottom: 0.5rem;
   margin-block-end: 0.5rem;
   margin-left: 0;
@@ -802,7 +802,7 @@ legend {
   width: 100%;
   max-width: 100%;
   padding: 0;
-  margin-bottom: 8px;
+  margin-bottom: 0.36364em;
   margin-bottom: 0.5rem;
   margin-block-end: 0.5rem;
   color: inherit;
